chore(fetch-app): change data api to new endpoints
change data api to new api
