# fetch-app/services/restapi/controllers/komoditas/komoditas.go
@@ -1,11 +1,0 @@
-package komoditas
-
-type CtrlKomoditas struct{}
-
-func (p *CtrlKomoditas) KafkaTopic() string {
-	return "t-komoditas"
-}
-
-func (p *CtrlKomoditas) KafkaEventName() string {
-	return "komoditas"
-}
