# fetch-app/services/restapi/controllers/transactions/transactions.go
@@ -1,0 +1,11 @@
+package transactions
+
+type CtrlTransactions struct{}
+
+func (p *CtrlTransactions) KafkaTopic() string {
+	return "t-transactions"
+}
+
+func (p *CtrlTransactions) KafkaEventName() string {
+	return "transactions"
+}
